# pyaml-tests

./: .gitignore  MANIFEST.in  README.rst  pyproject.toml
examples/: test_something.py
examples/tests/operations/: add.py  compare.py
examples/tests/specs/: test_add.yaml  test_compare.yaml
pyaml_tests/: __init__.py  config.py  conftest.py  console.py  defaults.yaml  pytest.ini  test.py  utils.py
