[tool.poetry]
name = "pyaml-tests"
version = "0.1.0"
description = ""
authors = ["Saar Wasserman <saarwasserman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.2"
PyYAML = "^5.4.1"
pylint = "^2.6.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
dunk = 'pyaml_tests.console:main'


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
